--- a/regbank_converter.ui
+++ b/regbank_converter.ui
@@ -6,21 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>200</height>
+    <width>480</width>
+    <height>240</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Register Bank Description Converter</string>
   </property>
   <widget class="QPushButton" name="ConvertButton">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>140</y>
+     <x>190</x>
+     <y>110</y>
      <width>100</width>
      <height>40</height>
     </rect>
+   </property>
+   <property name="toolTip">
+    <string>Convert register bank description.</string>
    </property>
    <property name="text">
     <string>Convert</string>
@@ -29,11 +32,14 @@
   <widget class="QPushButton" name="RegbankButton">
    <property name="geometry">
     <rect>
-     <x>55</x>
-     <y>90</y>
+     <x>100</x>
+     <y>110</y>
      <width>50</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="toolTip">
+    <string>Load Magillem-generated register description.</string>
    </property>
    <property name="text">
     <string>Load</string>
@@ -42,11 +48,14 @@
   <widget class="QPushButton" name="StyleButton">
    <property name="geometry">
     <rect>
-     <x>195</x>
-     <y>90</y>
+     <x>330</x>
+     <y>110</y>
      <width>50</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="toolTip">
+    <string>Load Telechips datasheet style.</string>
    </property>
    <property name="text">
     <string>Load</string>
@@ -55,9 +64,9 @@
   <widget class="QLabel" name="StyleLabel">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>20</y>
-     <width>120</width>
+     <x>250</x>
+     <y>40</y>
+     <width>210</width>
      <height>60</height>
     </rect>
    </property>
@@ -67,18 +76,78 @@
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="RegbankLabel">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>20</y>
-     <width>120</width>
+     <y>40</y>
+     <width>210</width>
      <height>60</height>
     </rect>
    </property>
    <property name="text">
     <string>regbank.docx</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="TextBrowser">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>160</y>
+     <width>440</width>
+     <height>70</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="RegDescLabel">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>10</y>
+     <width>150</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Register Description</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="DataStyleLabel">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>10</y>
+     <width>150</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Datasheet Style</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
